Fix bugs (#6)
* Fix LangFuse config

* Fix bugs

* Remove empty line

* Fix prompts

* Fix LangFuse config

* Add profession storage

---------
