# app/server.js
@@ -8,6 +8,7 @@ const server = Hapi.server({
 const routes = [].concat(
   require('./routes/healthy'),
   require('./routes/healthz'),
+  require('./routes/jaf/profession'),
   require('./routes/jaf/repository'),
   require('./routes/jaf/compare')
 )
